add_library(TristateLogicCircuits

        LogicGates/TriStateBufferGate.cpp
        LogicGates/TestGate.cpp
        LogicGates/AndGate.cpp

        LogicGates/OrGate.cpp
        LogicGates/XorGate.cpp
        Adders/FullAdder.cpp
        Adders/FourBitAdder.cpp
        LogicGates/NorGate.cpp
        LogicGates/NotGate.cpp
        Memory/D_FlipFlop.cpp
        LogicGates/TriInputAndGate.cpp
        Decoders/TwoToFourLineDecoder.cpp
        Memory/FourBitFourWordRAM.cpp
        LogicGates/QuadInputOrGate.cpp
        Decoders/FourToSixteenLineDecoder.cpp
        Decoders/ThreeToEightLineDecoder.cpp


        Decoders/FiveToThirtyTwoLineDecoder.cpp
        )


